--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,8 +54,8 @@
 // Font-Awesome
 @import 'font-awesome/font-awesome';
 
-// Google fonts
-//@import url(https://fonts.googleapis.com/css?family=Muli:400,300,300italic);
+// Helper
+@import 'helper';
 
 // Custom theme files
 @import 'theme';
