--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,27 +3,25 @@
 
 <!doctype html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ site.title }} - {{ site.name }}</title>
+    <title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
     <meta name="description" content="{{ site.site_description }}" />
     <meta name="author" content="{{ site.author.name }}" />
     <meta name="copyright" content="{{ site.copyright }}"/>
 
-    <!-- 404 Redirect -->
     {% if page.url == "/404.html" %}
       <meta http-equiv="refresh" content="5; url=/">
     {% endif %}
-    <!-- /404 Redirect -->
 
     <link rel="stylesheet" href="{{ page.base_url }}assets/css/style.css" />
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <!-- Foundation Favicons -->
     <link href="http://foundation-forum0.zurbstatic.com/assets/favicon-47a37f0a0e941bf5966d5d4e8a66de14.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700"/>
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://foundation-forum2.zurbstatic.com/assets/favicons/apple-touch-icon-144x144-precomposed-988ff9eec894c302f748ee817b9a2912.png">
 
