fixed links for gh-pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       <meta http-equiv="refresh" content="5; url=/">
     {% endif %}
 
-    <link rel="stylesheet" href="{{ page.base_url }}assets/css/style.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <link href="http://foundation-forum0.zurbstatic.com/assets/favicon-47a37f0a0e941bf5966d5d4e8a66de14.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
