--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
- <script src="{{ page.base_url }}assets/js/vendor/jquery/jquery-2.1.4.min.js"></script>
- <script src="{{ page.base_url }}assets/js/foundation.min.js"></script>
- <script src="{{ page.base_url }}assets/js/scripts.js"></script>
+ <script src="{{ site.baseurl }}/assets/js/vendor/jquery/jquery-2.1.4.min.js"></script>
+ <script src="{{ site.baseurl }}/assets/js/foundation.min.js"></script>
+ <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
   </body>
 </html>
